# homeassistant-opengolfcoach

./: .gitignore  CHANGELOG.md  LICENSE  MIGRATION.md  README.md  hacs.json  pyproject.toml
.github/workflows/: build-wheels.yml
custom_components/nova_by_openlaunch/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json
custom_components/open_golf_coach/: __init__.py  config_flow.py  const.py  manifest.json  rust_adapter.py  sensor.py
custom_components/open_golf_coach/analysis/: __init__.py  analysis.py  benchmarks.py  clubhead_data.py  coaching.py  self_check.py  shot_classifier.py  trajectory.py  trajectory_analysis.py  unit_conversions.py  utils.py  vector.py
custom_components/open_golf_coach/data/: benchmarks.json  tips.json
rust_extension/: Cargo.toml  README.md  pyproject.toml
rust_extension/python/opengolfcoach_wrapper/: __init__.py
rust_extension/src/: lib.rs
scripts/: install_rust_extension.sh
